--- a/201_250.md
+++ b/201_250.md
@@ -27,7 +27,7 @@ B. Build an Amazon Pinpoint journey. Configure Amazon Pinpoint to send events to
 -   [ ] This solution meets all the requirements: sending SMS, receiving replies, and storing responses for analysis.
    
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Amazon Connect is a cloud-based contact center service, not primarily designed for automated marketing SMS campaigns. While it can send SMS, it is not the most suitable service for this scenario.
 -   [ ] C. Amazon SQS is a message queuing service and is not designed for sending SMS messages. It is used for queuing messages between applications.
@@ -62,7 +62,7 @@ A. Move the data to the S3 bucket. Use server-side encryption with Amazon S3 man
 -   [ ] SSE-S3 provides automatic encryption of data at rest.
 -   [ ] SSE-S3 keys are automatically rotated by AWS, which satisfies the key rotation requirement with the least operational overhead.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. While using KMS customer managed keys with automatic key rotation meets the requirements, it involves more configuration than SSE-S3, increasing operational overhead.
 -   [ ] C. Manually rotating KMS keys increases operational overhead, which contradicts the requirement for the least overhead.
@@ -97,7 +97,7 @@ D. Add an Auto Scaling group for the application that sends meeting invitations.
 -   [ ] Auto Scaling groups can automatically adjust the number of EC2 instances based on demand.
 -   [ ] Scaling based on SQS queue depth ensures that the application that sends meeting invitations scales in response to the number of requests waiting to be processed.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. DAX is used to accelerate DynamoDB read operations, but the issue is with sending meeting invitations, not writing to the database.
 -   [ ] B. API Gateway is used for managing APIs, not for processing messages or scaling the application that sends invitations.
@@ -135,7 +135,7 @@ C. Create a data lake by using AWS Lake Formation. Create an AWS Glue JDBC conne
 -   [ ] Using AWS Glue connections, data from Amazon RDS can be integrated into the data lake.
 -   [ ] This solution minimizes operational overhead by providing a centralized and managed way to handle data access and permissions.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Migrating all purchase data directly into Amazon RDS might not be scalable or cost-effective for large volumes of data. RDS access controls are not as fine-grained as Lake Formation.
 -   [ ] B. Using Lambda, Glue, Athena, and S3 policies requires more manual configuration and management of permissions across different services compared to Lake Formation.
@@ -170,7 +170,7 @@ C. Create a private Amazon S3 bucket. Use an S3 bucket policy to allow access fr
 -   [ ]   Using a private S3 bucket and an OAI ensures that the content is only accessible through CloudFront, enhancing security.
 -   [ ]   This solution is resilient because S3 is inherently highly available and scalable.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ]   A. Amazon Lightsail is a virtual private server and is not designed for highly scalable and resilient website hosting. It does not integrate well with CloudFront for origin access control.
 -   [ ]   B. Using EC2 instances and Auto Scaling with an Application Load Balancer is more complex and expensive than using S3 for static content. It also involves more operational overhead.
@@ -205,7 +205,7 @@ C. Create an Amazon EventBridge (Amazon CloudWatch Events) rule for the Createlm
 -   [ ] By creating a rule specifically for the `CreateImage` API call and setting an SNS topic as the target, you can efficiently trigger alerts with minimal setup and maintenance.
 -   [ ] This solution avoids the need for custom code to query logs or manage queues, reducing operational overhead.
   
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Using a Lambda function to query CloudTrail logs adds complexity and requires writing and maintaining code. It's also less efficient than EventBridge, which can directly capture the API event.
 -   [ ] B. Configuring CloudTrail with SNS and then using Athena to query logs involves multiple services and more steps, increasing operational overhead. Athena is also better suited for analytical queries, not real-time alerting.
@@ -240,7 +240,7 @@ D. Use the Amazon Simple Queue Service (Amazon SQS) queue and Lambda to buffer w
 -   [ ]   This buffering prevents DynamoDB from being overwhelmed and helps avoid losing user requests.
 -   [ ]   A Lambda function can then process the messages from the SQS queue and write them to DynamoDB at a controlled rate, ensuring that DynamoDB's throughput is not exceeded.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ]   A. Adding throttling on API Gateway might help to control the rate of requests, but it doesn't address the underlying issue of DynamoDB being unable to handle the write load. It could also result in losing user requests if they are throttled.
 -   [ ]   B. DAX is a cache for DynamoDB, designed to accelerate read operations. It does not help with write-heavy scenarios or buffer writes.
@@ -275,7 +275,7 @@ A. Create an interface VPC endpoint for Amazon S3 in the subnet where the EC2 in
 - [ ] Attaching a resource policy to the S3 bucket restricts access to only the specified IAM role of the EC2 instance, enhancing security.
 - [ ] This solution meets the requirements of keeping traffic private and restricting access.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] B. Gateway VPC endpoints for S3 are accessed via a gateway and do not use private IP addresses in the same way as interface endpoints. They are simpler but do not provide the same level of network isolation. Security groups are not directly attached to gateway endpoints.
 - [ ] C. Using `nslookup` to obtain private IP addresses is not a reliable or scalable solution. IP addresses can change, and this approach does not guarantee that traffic will remain within the AWS network.
@@ -310,7 +310,7 @@ A. Use Amazon ElastiCache to manage and store session data.
 - [ ] This allows any EC2 instance to retrieve session data, regardless of which instance originally handled the user's request.
 - [ ] It supports the dynamic nature of Auto Scaling, as instances can come and go without losing session information.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] B. Session affinity (sticky sessions) can maintain user sessions to specific instances, but it doesn't work well with Auto Scaling. Instances can be terminated, and traffic can be unevenly distributed.
 - [ ] C. AWS Systems Manager Session Manager is used for managing EC2 instances, not for storing application session data.
@@ -351,7 +351,7 @@ D. Provision two Amazon Simple Queue Service (Amazon SQS) queues: one for order 
 - [ ] Scaling based on a backlog per instance calculation ensures that the Auto Scaling groups respond to the actual workload (number of orders waiting to be processed) rather than just CPU utilization.
 - [ ] This approach optimizes resource utilization by scaling based on demand and prevents order loss by queuing them.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Configuring minimum capacity based on peak workload values does not optimize resource utilization; it leads to over-provisioning during off-peak hours.
 - [ ] B. Scaling based on CPU utilization might not accurately reflect the order processing load. High CPU can be due to other processes, while low CPU can still have a large order backlog. Using SNS to create Auto Scaling groups is not a standard or efficient practice.
@@ -385,7 +385,7 @@ D. Run a query with the AWS Resource Groups Tag Editor to report on the resource
 - [ ] AWS Resource Groups Tag Editor allows you to search for and manage tags across multiple AWS services and Regions in a single view.
 - [ ] It is designed to quickly identify resources based on tags, providing the fastest way to meet the requirements.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. AWS CloudTrail records API calls but does not provide a direct, efficient way to list resources based on tags.
 - [ ] B. Using the AWS CLI to query each service across all Regions would be time-consuming and complex, requiring multiple commands and scripts.
@@ -420,7 +420,7 @@ A. S3 Intelligent-Tiering
 - [ ] It ensures data is immediately available with no retrieval fees, making it suitable for variable access patterns and the requirement for immediate availability.
 - [ ] This provides a cost-effective solution by reducing storage costs when data is accessed less frequently, without sacrificing performance.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] B. S3 Glacier Instant Retrieval is designed for long-term archive with immediate retrieval, but it is generally more expensive for frequently accessed data.
 - [ ] C. S3 Standard is suitable for frequently accessed data but does not optimize costs for data with variable access patterns.
@@ -455,7 +455,7 @@ A. Configure AWS WAF rules and associate them with the ALB.
 - [ ] It integrates directly with the ALB, providing application-level filtering of traffic.
 - [ ] AWS WAF is a managed service, reducing the operational overhead for the company.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] B. Deploying the application using Amazon S3 with public hosting enabled does not provide protection against application-level attacks.
 - [ ] C. AWS Shield Advanced provides protection against DDoS attacks but does not filter specific application-level attacks like SQL injection or cross-site scripting.
@@ -490,7 +490,7 @@ B. Create an AWS Glue crawler to discover the data. Create an AWS Glue extract, 
 - [ ] AWS Glue crawler can automatically infer the schema of the .csv files.
 - [ ] AWS Glue ETL jobs can efficiently transform the data into Parquet format with minimal coding effort.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Creating an Amazon EMR cluster and writing a Spark application involves more development and operational overhead compared to using AWS Glue.
 - [ ] C. Using AWS Batch requires defining job definitions and managing dependencies, which is more complex than using AWS Glue for simple ETL tasks.
@@ -525,7 +525,7 @@ A. Order AWS Snowball devices to transfer the data. Use a lifecycle policy to tr
 - [ ] Amazon S3 Glacier Deep Archive provides the lowest-cost storage for long-term retention of infrequently accessed data.
 - [ ] Using a lifecycle policy automates the transition of data to Glacier Deep Archive, reducing storage costs.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] B. Transferring 700 TB of data over a 500 Mbps internet connection would take a very long time, exceeding the 1-month migration requirement.
 - [ ] C. Provisioning an AWS Direct Connect connection is more expensive than using Snowball for a one-time migration of this size.
@@ -561,7 +561,7 @@ B. Turn on the default encryption settings for the S3 bucket. Use the S3 Invento
 - [ ] This approach minimizes the effort required to encrypt a large number of existing objects.
 - [ ] Setting default encryption ensures that future objects are automatically encrypted.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Creating a new bucket and copying all objects is time-consuming and involves more steps than using S3 Batch Operations.
 - [ ] C. While creating a KMS key and setting default encryption is a valid approach for future objects, it does not efficiently encrypt existing objects.
@@ -595,7 +595,7 @@ A. Deploy the application with the required infrastructure elements in place. Us
 - [ ] An Aurora Replica in a second region provides a ready-to-go database that can take over quickly.
 - [ ] This solution meets the requirements for disaster recovery with a tolerance for some downtime and data loss.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] B. Active-active failover is designed for high availability, not disaster recovery, and involves running a scaled-down deployment, which is not required by the scenario.
 - [ ] C. Replicating the entire primary infrastructure in a second region is more costly and complex than necessary for disaster recovery. Restoring from a snapshot can increase downtime.
@@ -634,7 +634,7 @@ E. Update the network ACL to allow inbound TCP port 443 from source 0.0.0.0/0 an
 
 - [ ] Network ACLs act as a firewall for the subnet and must also allow both inbound traffic on port 443 and outbound traffic on ephemeral ports (32768-65535) for the server's responses.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] B. Security group rules specify allowed traffic, not destination.
 - [ ] C. Network ACLs need to allow both inbound and outbound traffic.
@@ -668,7 +668,7 @@ D. Modify the CloudFormation templates. Replace the EC2 instances with R5 EC2 in
 - [ ] CloudFormation allows for infrastructure as code, enabling repeatable and manageable deployments.
 - [ ] Custom latency metrics provide detailed insights into application performance, aiding in capacity planning.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. T3 instances are burstable and not ideal for consistent memory-intensive workloads. Making changes via the console is not operationally efficient.
 - [ ] B. Manually adjusting Auto Scaling group capacity is not efficient and does not fully automate scaling.
@@ -702,7 +702,7 @@ B. An AWS Lambda function
 - [ ] It scales automatically and can handle variable workloads, including periods of inactivity.
 - [ ] Lambda functions can execute quickly and are suitable for asynchronous processing.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. AWS Glue jobs are designed for ETL (extract, transform, load) operations and are not suitable for real-time, low-latency processing.
 - [ ] C. Amazon EKS involves running and managing container orchestration, which is more expensive and complex than Lambda for this use case.
@@ -737,7 +737,7 @@ D. Amazon S3
 -   [ ] It allows concurrent access to files by multiple tools and users.
 -   [ ] S3's scalability and cost-effectiveness make it suitable for storing large volumes of log data for extended periods.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Amazon EBS volumes are block storage and are attached to a single EC2 instance, making concurrent access difficult and costly for long-term storage.
 -   [ ] B. Amazon EFS is a file storage service for use with EC2 instances, but it is more expensive than S3 for long-term archival of log files.
@@ -772,7 +772,7 @@ A. Create an IAM role in the company's account to delegate access to the vendor'
 - [ ] This approach follows the principle of least privilege by granting only the necessary permissions.
 - [ ] It provides a secure and auditable way to manage external access.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] B. Creating an IAM user for the vendor is less secure and harder to manage, as it involves sharing credentials.
 - [ ] C. IAM groups are used to manage permissions for multiple users within the same account, not for external access.
@@ -812,7 +812,7 @@ D. Create a VPC endpoint for DynamoDB.
 - [ ] VPC endpoints enable private connectivity to DynamoDB without traversing the internet.
 - [ ] This ensures that the traffic remains within the AWS network, enhancing security.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] B. Attaching an IAM user to the EKS pod is incorrect; IAM users are for people, not applications.
 - [ ] C. Network ACLs control traffic at the subnet level but do not provide private connectivity like VPC endpoints.
@@ -852,7 +852,7 @@ E. Launch four EC2 instances: two instances in one Availability Zone and two ins
 - [ ] Distributing instances across multiple Availability Zones ensures fault tolerance.
 - [ ] If one Availability Zone becomes unavailable, the application continues to run in the other zones.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Failover routing is used for disaster recovery, not for distributing traffic to healthy instances.
 - [ ] B. Weighted routing distributes traffic based on assigned weights, not randomly.
@@ -886,7 +886,7 @@ B. Send activity data to an Amazon Kinesis Data Firehose delivery stream. Config
 - [ ] Amazon Redshift is a data warehouse that supports SQL queries for analytics.
 - [ ] This solution provides a managed, scalable, and cost-effective way to ingest and analyze petabytes of data.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Kinesis Data Streams require more management for data processing and analysis compared to Firehose and Redshift.
 - [ ] C. Using Lambda functions to process data from S3 as it arrives is less efficient for large-scale data ingestion and analytics.
@@ -927,7 +927,7 @@ E. Use Amazon API Gateway to send the raw data to an Amazon Kinesis data stream.
 - [ ] Kinesis Data Firehose can efficiently ingest and deliver streaming data to S3, scaling automatically.
 - [ ] This combination provides a scalable and managed solution for data ingestion and processing.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] B. Using Amazon Route 53 to route traffic to different EC2 instances does not address the data processing bottleneck.
 - [ ] C. Adding more EC2 instances increases operational overhead and may not scale efficiently.
@@ -960,7 +960,7 @@ B. Configure the S3 Lifecycle policy to delete previous versions as well as curr
 - [ ] S3 Lifecycle policies can manage object expiration, including both current and previous versions.
 - [ ] This is the most cost-effective way to automate the deletion of old log files.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. CloudTrail does not have a feature to directly expire objects in S3.
 - [ ] C. Using a Lambda function is more complex and costly than using S3 Lifecycle policies.
@@ -994,7 +994,7 @@ C. Modify the API to write incoming data to an Amazon Simple Queue Service (Amaz
 - [ ] This approach minimizes the number of connections to the database, as the Lambda function can process messages in batches.
 - [ ] It also ensures that no data is lost, as SQS retains messages until they are successfully processed.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Increasing the instance size might provide temporary relief but does not address the issue of fluctuating traffic and potential database overload.
 - [ ] B. Multi-AZ is for high availability, not for scaling write capacity. Writing to all active instances is not a standard RDS configuration.
@@ -1028,7 +1028,7 @@ A. Migrate the databases to Amazon Aurora Serverless for Aurora MySQL.
 - [ ] It simplifies database management and provides high performance and durability.
 - [ ] Aurora Serverless minimizes operational effort by automating scaling and management tasks.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] B. While Aurora Serverless for PostgreSQL is also a valid option, the question specifies MySQL, making this less appropriate.
 - [ ] C. Combining databases into a larger EC2 instance does not simplify scaling and requires manual management.
@@ -1062,7 +1062,7 @@ C. Remove the two NAT instances and replace them with two NAT gateways in differ
 - [ ] Deploying NAT gateways in different Availability Zones ensures fault tolerance.
 - [ ] NAT gateways automatically scale to handle increased traffic.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Deploying NAT gateways in the same Availability Zone does not provide fault tolerance.
 - [ ] B. Using Auto Scaling groups with Network Load Balancers for NAT instances is more complex and less efficient than using NAT gateways.
@@ -1097,7 +1097,7 @@ B. Configure a VPC peering connection between VPC A and VPC B.
 -   [ ] It allows the application in VPC A to access the database in VPC B as if they were in the same network.
 -   [ ] This solution provides secure and private access without exposing traffic to the internet.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Allowing all traffic from the public IP address of the application server is less secure than using VPC peering.
 -   [ ] C. Making the DB instance publicly accessible exposes it to the internet, which is a security risk.
@@ -1131,7 +1131,7 @@ C. Publish VPC flow logs to Amazon CloudWatch Logs. Create required metric filte
 -   [ ] By analyzing flow logs, you can detect when RDP (port 3389) or SSH (port 22) connections are established.
 -   [ ] CloudWatch metric alarms can then notify the operations team.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. CloudWatch Application Insights is designed for monitoring application health, not for detecting specific access patterns like RDP or SSH.
 -   [ ] B. IAM instance profiles with the AmazonSSMManagedInstanceCore policy are for AWS Systems Manager, not for monitoring network access.
@@ -1169,7 +1169,7 @@ B. Enable multi-factor authentication to the root user.
 
 -   [ ] MFA adds an extra layer of security by requiring a second form of verification.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] C. Storing root user access keys is a security risk. Root user access keys should be avoided altogether.
 -   [ ] D. Adding the root user to a group is unnecessary as the root user inherently has full administrative permissions.
@@ -1203,7 +1203,7 @@ C. Use AWS Key Management Service (AWS KMS) to encrypt the EBS volumes and Auror
 -   [ ] AWS Certificate Manager (ACM) certificates are used to encrypt data in transit via the ALB.
 -   [ ] This solution provides encryption for both data at rest and in transit.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. KMS is for encryption keys, not certificates. ACM is not used to encrypt EBS or Aurora storage.
 -   [ ] B. Using the root account to manage encryption is a poor security practice. There is no single option to turn on encryption for all data at rest and in transit.
@@ -1238,7 +1238,7 @@ C. Use the AWS Schema Conversion Tool with AWS Database Migration Service (AWS D
 -   [ ] A memory-optimized DMS instance is suitable for handling high read/write activity.
 -   [ ] Mapping all tables ensures that all data is migrated and kept in sync.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. AWS DataSync is for data migration, not database migration and synchronization.
 -   [ ] B. Using DataSync is incorrect for database migration.
@@ -1272,7 +1272,7 @@ D. Use load-balanced Multi-AZ AWS Elastic Beanstalk environments for the front-e
 -   [ ] Amazon RDS Multi-AZ ensures high availability for the database.
 -   [ ] Amazon S3 is used for scalable and cost-effective storage of images.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Using Lambda and DynamoDB requires significant application changes.
 -   [ ] B. RDS read replicas are for scaling reads, not for high availability in the same way as Multi-AZ.
@@ -1305,7 +1305,7 @@ A. Set up a VPC peering connection between VPC-A and VPC-B.
 -   [ ] VPC peering connects two VPCs and enables resources in those VPCs to communicate with each other privately.
 -   [ ] It does not have a single point of failure or bandwidth limitations.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. VPC gateway endpoints are for accessing AWS services like S3 or DynamoDB, not for EC2 instances in another VPC.
 -   [ ] C. A virtual private gateway is used for VPN connections, not for connecting VPCs in different accounts.
@@ -1339,7 +1339,7 @@ C. Use AWS Budgets to create a cost budget for each account. Set the period to m
 -   [ ] You can configure budgets to monitor EC2 instance usage and receive alerts when thresholds are exceeded.
 -   [ ] This is a cost-effective and straightforward way to monitor spending.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Daily reports are more frequent than necessary and may lead to alert fatigue. Cost Explorer does not directly send notifications based on thresholds.
 -   [ ] B. Similar to A, Cost Explorer alone does not provide threshold-based notifications.
@@ -1373,7 +1373,7 @@ A. Create an Amazon API Gateway REST API. Configure the method to use the Lambda
 -   [ ] API Gateway supports IAM authentication to control access to the microservice.
 -   [ ] This is a straightforward and managed way to expose a Lambda function as an API.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. Lambda function URLs do not directly support IAM authentication.
 -   [ ] C. Lambda@Edge is for processing requests at CloudFront edge locations, adding complexity for a simple microservice.
@@ -1406,7 +1406,7 @@ D. Host the visualization tool in the same AWS Region as the data warehouse and 
 -   [ ] Data transfer within the same AWS Region using Direct Connect is generally the most cost-effective.
 -   [ ] Direct Connect provides lower costs than internet data transfer.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Transferring data over the internet incurs higher data transfer costs.
 -   [ ] B. Transferring data over the internet incurs higher data transfer costs.
@@ -1441,7 +1441,7 @@ C. Migrate the PostgreSQL database to an Amazon RDS for PostgreSQL DB instance. 
 -   [ ] A read replica in another Region provides cross-region availability.
 -   [ ] This setup minimizes operational overhead compared to managing a PostgreSQL cluster on EC2.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Managing a PostgreSQL cluster on EC2 instances involves more operational overhead.
 -   [ ] B. Multi-AZ provides high availability within a single Region, not across multiple Regions.
@@ -1475,7 +1475,7 @@ C. Multivalue answer routing policy
 -   [ ] It can be configured to return only the IP addresses of healthy instances.
 -   [ ] This policy is designed for high availability and load distribution.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Simple routing policy returns all records in no particular order and does not check health.
 -   [ ] B. Latency routing policy routes traffic based on the lowest latency, not for returning all healthy IPs.
@@ -1509,7 +1509,7 @@ A. Deploy an AWS Storage Gateway file gateway as a virtual machine (VM) on premi
 -   [ ] It caches frequently accessed data locally, reducing the need to retrieve data from S3.
 -   [ ] This solution allows clinics to access files in S3 with minimal latency.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. AWS DataSync is for data migration and synchronization, not for providing low-latency access to files.
 -   [ ] C. AWS Storage Gateway volume gateway provides block storage, not file-based access.
@@ -1543,7 +1543,7 @@ C. Move the database to Amazon Aurora with a read replica in another Availabilit
 -   [ ] An Auto Scaling group ensures the web tier can scale to meet demand.
 -   [ ] An Application Load Balancer distributes traffic across multiple instances.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Manually launching EC2 instances is not scalable or highly available. RDS with automatic backups does not provide the same level of HA as Aurora with a read replica.
 -   [ ] B. Similar to A, manually launching instances is not scalable. A read replica in the same AZ does not provide cross-AZ HA.
@@ -1576,7 +1576,7 @@ D. Reduce the maximum number of EC2 instances in the development environment's A
 -   [ ] Auto Scaling groups allow you to control the number of running instances.
 -   [ ] Reducing the maximum size in the development environment lowers costs when there is less traffic.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. An ALB requires at least two instances for high availability, even in development.
 -   [ ] B. Changing the ALB balancing algorithm does not reduce costs.
@@ -1611,7 +1611,7 @@ D. Create public subnets in each Availability Zone. Associate the public subnets
 -   [ ] Private subnets contain the EC2 instances.
 -   [ ] Route tables direct traffic from the ALB to the instances.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. NLB is for TCP/UDP traffic, not HTTP/HTTPS. NAT gateway is for private subnets to access the internet, not the other way around.
 -   [ ] B. Moving EC2 instances to public subnets is less secure.
@@ -1649,7 +1649,7 @@ E. Enable automatic backups on the source instance by setting the backup retenti
 
 -   [ ] Automatic backups must be enabled to create a read replica.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. Failover priority is for Multi-AZ deployments, not read replicas.
 -   [ ] C. While allowing long-running transactions to complete is a good practice, it is not a prerequisite for creating a read replica.
@@ -1683,7 +1683,7 @@ D. Route incoming requests to Amazon Simple Queue Service (Amazon SQS). Configur
 -   [ ] Auto Scaling groups scale the number of instances based on the queue size, which reflects user load.
 -   [ ] This solution improves performance and scales the system efficiently.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Creating a copy of the instance does not provide automatic scaling. An ALB alone does not address the processing bottleneck.
 -   [ ] B. An S3 VPC endpoint improves S3 access but does not address the CPU bottleneck on the EC2 instances.
@@ -1716,7 +1716,7 @@ D. Create an Amazon FSx for Windows File Server file system. Attach the file sys
 -   [ ] Amazon FSx for Windows File Server provides fully managed file storage that supports SMB access.
 -   [ ] It eliminates the need to manage file servers and storage.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. AWS Storage Gateway volume gateway provides block storage, not file storage with SMB access.
 -   [ ] B. AWS Storage Gateway tape gateway is for backup and archival, not for shared file storage.
@@ -1751,7 +1751,7 @@ D. Use Amazon S3 as the target. Enable an S3 Lifecycle policy to transition the 
 -   [ ] S3 Lifecycle policies can automate the transition of logs to S3 Standard-IA for cost-effectiveness.
 -   [ ] This meets the requirement for frequent access initially and cost-effective storage later.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. CloudWatch is better for monitoring and alerting, not for long-term storage of large log volumes.
 -   [ ] B. Kinesis is for real-time streaming, not cost-effective long-term storage.
