--- a/251_300.md
+++ b/251_300.md
@@ -23,7 +23,7 @@ B. Create a NAT gateway, and place it in a public subnet. Configure the private 
 -   [ ] The private subnet's route table directs outbound traffic to the NAT gateway.
 -   [ ] This solution enables the EC2 instance to download updates securely.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. An internet gateway allows public subnets to access the internet, but not private subnets.
 -   [ ] C. A NAT instance requires more management than a NAT gateway. Placing it in the same subnet is incorrect.
@@ -57,7 +57,7 @@ A. Amazon Elastic File System (Amazon EFS)
 -   [ ] It supports concurrent access from multiple EC2 instances.
 -   [ ] EFS is designed with built-in redundancy and scalability.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. Amazon EBS is block storage and can only be attached to a single EC2 instance at a time.
 -   [ ] C. Amazon S3 Glacier Deep Archive is for long-term archival, not concurrent access.
@@ -96,7 +96,7 @@ C. Deleting Amazon EC2 instances
 -   [ ] Policy 2 denies "ds:Delete\*" actions.
 -   [ ] Deny statements override allow statements, but the cloud engineer is still allowed to delete EC2 instances.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. The engineer can't delete IAM users because it's not in Policy 1.
 -   [ ] B. "ds:Delete\*" denies deleting directories.
